# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 Huang Rui <vowstar@gmail.com>

[package]
name = "lefdef-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Huang Rui <vowstar@gmail.com>"]
description = "A Rust-based LEF/DEF file viewer with GUI"
license = "MIT"

[dependencies]
egui = "0.28"
egui_extras = { version = "0.28", features = ["default", "all_loaders"] }
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
geo = "0.28"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
