# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 Huang Rui <vowstar@gmail.com>

[package]
name = "lefdef-viewer"
version = "0.2.1"
edition = "2021"
authors = ["Huang Rui <vowstar@gmail.com>"]
description = "A Rust-based LEF/DEF file viewer with GUI"
license = "MIT"

[dependencies]
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend.
    "glow",          # Use the glow rendering backend as fallback.
    "wayland",       # Enable Wayland support.
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
nom = "8.0.0"
rfd = "0.15.3"
log = "0.4.27"
env_logger = "0.11.8"
lyon_tessellation = "1.0"
blake3 = "1.5"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
